<resources>
    <string name="app_name">mojaUL</string>
    <string name="prijava_v_aplikacijo_napis">Prijava v aplikacijo</string>
    <string name="prijava_v_studis_napis">Prijava v STUDIS</string>
    <string name="avtenitkacija_s_prstnim_odtisom_napis">AVTENTICIRAJTE SE S PRSTNIM ODTISOM</string>
    <string name="ime_in_priimek_napis">Ime Priimek</string>
    <string name="seznam_izpitov_napis">Seznam izpitov</string>
    <string name="vec_na_online_verziji_studis_napis">Online STUDIS</string>
    <string name="o_studentu_napis">Študent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seznam_zaposlenih_napis">Seznam zaposlenih</string>
    <string name="zaposlen_napis">prof. dr. Ime Priimek</string>
    <string name="email_zaposlenege">Email zaposlenega</string>
    <string name="email_zaposlenega">E-pošta zaposlenega</string>
    <string name="telefonska_stevilka_zaposlenega">000123658</string>
    <string name="stSobe">P01</string>
    <string name="domena_fakultete_FE">fe.uni-lj.si</string>
    <string name="ioNapaka">Napaka IO</string>
    <string name="pisanjeDatotekeUspesno">Pisanje datoteke uspešno</string>
    <string name="datotekeNiMogoceNajti">Datoteke ni mogoče najti</string>
    <string name="datotekaZaBelezenjeAkcij">DatotekaZaBelezenje</string>
    <string name="izkljucnoBelezenjeNapak">BelezenjeNapak</string>
    <string name="unikatnaKodaAplikacije">UUIDAplikacija_mojaUL</string>
    <string name="dobrodosli">Dobrodošli v tej aplikaciji.</string>
    <string name="studentski_email">E-poštni naslov študenta.</string>
    <string name="uporabnisko_geslo_studenta">Uporabniško geslo študenta</string>
    <string name="prijava_sistem_mojaUL">Prijava v mojaUL</string>
    <string name="potrbujetePomoc">Potrebujete pomoč? Kliknite na napis.</string>
    <string name="niInternetnePovezave">Nimate vzpostavljene povezave z internetom! Prepričajte se, da imate vzpostavljeno povezavo in poskusite še enkrat ali pa se obrnite na razvijalca.</string>
    <string name="niInternetnePoveezave">Preverite internetno povezavo in poskusite še enkrat.</string>
    <string name="prijavaVsistemUspesna">Prijava v sistem uspešna.</string>
    <string name="kombinacijaNeObstaja">Kombinacija e-poštnega naslova in gesla v sistemu ne obstaja, preverite vnose. Če menite, da napaka ni na vaši strani, konktatirajte razvijalca.</string>
    <string name="mailJeOK_debug">Z E-pošto je vse ok.</string>
    <string name="mailNiPravegaFormata">Prijavite se s študentskim mailom, ki vam ga je dala UL. Primer: jn0000@student.uni-lj.si</string>
    <string name="prijavljam">Prijavljam....</string>
    <string name="niVnesenegaGesla">Ste pozabili vnesti geslo?!</string>
    <string name="niVneseanegaGesla">Ste pozabili vnesti geslo?!</string>
    <string name="link_pomoc">https://github.com/shanji97/mojaUL_repo/</string>
    <string name="studis_gumb">STUDIS</string>
    <string name="zaposleni_gumb">Seznam zaposlenih</string>
    <string name="nastavitve">Nastavitve</string>
    <string name="jedilnik">Jedilnik</string>
    <string name="moodle_FRI">Moodle FRI</string>
    <string name="moodle_FE">Moodle FE</string>
    <string name="avtentikacijaUspesna">Avtentikacjia s prstnim odtisom je bila uspešna.</string>
    <string name="avtentikacijaNapaka">Pri avtentikaciji s prstnim odtisom je prišlo do napake.</string>
    <string name="avtetikacijaNiUspela">Avtentikacija s prstnim odtisom ni uspela. Prepričajte se, da imate pravi prstni odtis / ali se obrnite na razvijalca.</string>
    <string name="prijavaStudisMojaUL">Prijava v STUDIS znotraj aplikacije</string>
    <string name="prijaviteSeSPristnimOdtisom">Prijavite se s prstnim odtisom, ki ste ga določili v mobilni napravi.</string>
    <string name="tezavePriDelovanju">Težave? Kontaktirajte razvijalca.</string>
    <string name="nalaganjeNastavitev">Nalaganje nastavitev in podatkov</string>
    <string name="jsonDatotekaStudenta">https://karjola-shanji.herokuapp.com/student.json</string>
    <string name="vstopVAplikacijo">Vstop</string>
    <string name="avtenitkacija_s_prstnim_odtisom_napis_headerx">Avtentikacija s prstnim odtisom</string>
    <string name="ime_in_priimek_zaposlenega_napis">Ime in priimek zaposlenega</string>
    <string name="nazivZaposlenega">naziv zaposlenega</string>
    <string name="OpisZaposlenega">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. "</string>
    <string name="shranjujemPodatke">Shranjujem podatke študenta.</string>
    <string name="glavni_panel_napis">Glavni panel</string>
    <string name="STUDIS">STUDIS</string>
    <string name="ZAPOSLENI">Zaposleni</string>
    <string name="spletnaStranFakultete">Spletna stran fakultete</string>
    <string name="linkFaksa">https://fe.uni-lj.si/</string>
    <string name="linkStudis">https://github.com/shanji97/</string>
    <string name="nalagamStran">Nalagam stran</string>
    <string name="zivjo">"Živjo "</string>
    <string name="odjava">Odjava</string>
    <string name="ImeInPriimekStudenta">Aleksander Kovač</string>
    <string name="Ne_najdete_funkcionalnosti">Ne najdete funkcionalnosti?</string>
    <string name="poditeNaOnlineStudis">Pojdite na online STUDIS</string>
    <string name="kontaktniPodatki">Kontaktni podatki.</string>
    <string name="student_podatki">student</string>
    <string name="podatkovStudentaNi">Shranjeni podatkov o študentu ni.</string>
    <string name="mailJeUspesnoPoslan">Uspešno poslano!</string>
    <string name="mailNeuspesnoPoslan">Mail ni bi uspešno poslan!</string>
    <string name="NAPAKA_VRSTA_DATOTEKE">NAPAKA</string>
    <string name="streznikZaPodatke">ak3900@student.uni-lj.si</string>
    <string name="posredoVanje_podatkov_strezniku">Posredovanje podatkov stre</string>
    <string name="razvijalec">ak3900@student.uni-lj.si</string>
    <string name="NAPAKA_V_APLIKACIJI">Napaka v aplikaciji.</string>
    <string name="nalagamZaposlene">Nalagam seznam zaposlenih</string>
    <string name="nalagamZaposlenega">Nalagam informacije zaposlenega</string>
    <string name="nastaviBarvoOzadnja">Nastavi barvo ozadje</string>
    <string name="noveNastavitve">Prišli ste do konca nastavitev, ki se konstanto posodabljajo, za čim boljšo uporabniško izkušnjo.</string>
    <string name="netLink">netLink</string>
    <string name="studisFaksa">https://studij.fe.uni-lj.si/Account/</string>
    <string name="spremembaPodatkov">Sprememba podatkov</string>
    <string name="mobilniInStacionarniTelefon">Mobilni in stacionarni telefon</string>
    <string name="naslov_za_vrocanje">Naslov za vročanje</string>
    <string name="shrani">Shrani podatke v sistem</string>
    <string name="drzava">Država</string>
    <string name="ulica">Ulica</string>
    <string name="shranjujemPodatkeStudenta">Shranjujem vaše podatke.</string>
    <string name="podatkiShranjenu">Podatki uspešno shranjeni.</string>
    <string name="kraj">Kraj</string>

</resources>