<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
           android:layout_marginLeft="30dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:text="@string/prijava_v_aplikacijo_napis"
            android:textSize="20dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" >
        </ImageView>
        <EditText
            android:id="@+id/emailStudenta"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:ems="10"
            android:hint="@string/studentski_email"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/gesloStudenta"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/uporabnisko_geslo_studenta"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/prijavaVsistem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="158dp"
            android:layout_marginTop="410dp"
            android:background="@drawable/border_red"
            android:backgroundTint="@color/CgpUL"
            android:textColor="#E03228"
            app:backgroundTint="@null"
            android:text="@string/prijava_sistem_mojaUL"
             />

        <TextView
            android:id="@+id/pomocPriPrijavi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_stroke_redUL"
            android:layout_marginTop="600dp"
            android:text="@string/potrbujetePomoc"

            />
    </RelativeLayout>

</RelativeLayout>
